--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,117 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Karla", sans-serif;
+  margin: 0;
+  padding: 0;
 }
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px 25px;
+  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%); 
+}
+
+.logo {
+  display: flex;
+  margin: 2px 0 2px 0;
+}
+
+.logo-img {
+  height: 30px;
+}
+
+.logo-text {
+  margin: 3px 0 0 7px;
+  margin-right: auto;
+  color: white;
+}
+
+.nav-header {
+  margin-top: 7px;
+  color: white;
+}
+
+
+.main {
+  padding: 70px 100px;
+}
+
+.form {
+  display: grid;
+  grid-template: 50px 50px / 1fr 1fr;
+  gap: 2rem;
+}
+
+.form-input {
+  text-indent: 15px;
+  font-size: 1rem;
+  font-weight: bold;
+  border: 2px solid black;
+  color: gray;
+  border-radius: 5px;
+  font-family: "Karla", sans-serif;
+}
+
+.form-btn {
+  grid-column: span 2 / auto;
+  font-size: 1.3rem;
+  color: white;
+  border: 2px solid black;
+  border-radius: 8px;
+  background: linear-gradient(to right, #711F8D, #A818DA);
+  cursor: pointer;
+  transition: transform 300ms ease-out;
+}
+
+.form-btn:hover {
+  transform: scale(1.03);
+}
+
+.meme-container {
+  position: relative;
+  margin: 20px 0;
+}
+
+.meme-image {
+  max-width: 100%;
+  transform: translateX(50%);
+}
+
+.meme-text {
+  position: absolute;
+  max-width: 80%;
+  margin: 15px 0;
+  padding: 0 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family:'Courier New', Courier, monospace;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-align: center;
+  font-weight: bold;
+  text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
+}
+
